2017-01-04 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdint.h,
	  src/SDCCsymt.c,
	  src/ds390/gen.c,
	  src/ds390/gen.h,
	  src/ds390/ralloc.c,
	  support/regression/tests/*.c:
	  Initial long long support for ds390.

2018-01-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/scripts/sdcc.nsi: added tlcs90 library

2017-12-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/scripts/sdcc.nsi: added sdastlcs90.exe

2017-12-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/wchar.c: disabled test for gcc 5.4 and older
	* support/scripts/sdcc.nsi: added huge library

2017-12-29 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/cmd.src/clean.mk:
	  Cleanup bison-generated files.

2017-12-28 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/cmd.src/Makefile.in,
	  sim/ucsim/cmd.src/cmdpars.cc,
	  sim/ucsim/cmd.src/cmdpars.hh,
	  device/lib/pic14/*,
	  device/lib/pic16/*:
	  Fixes for out-of-tree builds.

2017-11-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/ports/mcs51-huge/spec.mk,
	* support/regression/Makefile.in: huge lib is now built by default
	* support/regression/tests/gcc-torture-execute-20140212-1.c,
	* support/regression/tests/gcc-torture-execute-20140212-2.c,
	* support/regression/tests/gcc-torture-execute-pr60062.c,
	* support/regression/tests/gcc-torture-execute-pr63209.c,
	* support/regression/tests/gcc-torture-execute-pr64979.c,
	* support/regression/tests/gcc-torture-execute-pr67714.c,
	* support/regression/tests/gcc-torture-execute-pr68250.c,
	* support/regression/tests/gcc-torture-execute-pr68321.c,
	* support/regression/tests/gcc-torture-execute-pr68390.c,
	* support/regression/tests/gcc-torture-execute-pr78675.c,
	* support/regression/tests/gcc-torture-execute-pr80153.c,
	* support/regression/tests/bug-2567.c: fix or suppress warnings
	* support/regression/tests/gcc-torture-execute-pr66940.c: added test that
	  long != long long